--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,8 @@
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--sysconfdir=/etc/monit
+		--sysconfdir=/etc/monit \
+		--without-ssl
 
 override_dh_installinit:
 	dh_installinit -- "start 99 2 3 4 5 . stop 01 0 1 6 ."
