debian: modify build so autoreconf is run
fixup debian/rules so autoreconf is run to generate the configure
script. This allows use to delete the ./configure script.
Also, update the debian/compat file to be debhelper 9 to match
with the Build-Depends line in debian/control.

--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 
 
 %:
-	dh $@ --dbg-package=monit-dbg
+	dh $@ --dbg-package=monit-dbg --with autoreconf
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
