--- a/debian/rules
+++ b/debian/rules
@@ -2,7 +2,7 @@
 
 
 %:
-	dh $@ --dbg-package=monit-dbg --with autoreconf
+	dh $@ --dbg-package=monit-gpl-dbg --with autoreconf
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
@@ -10,13 +10,14 @@ override_dh_auto_configure:
 		--without-ssl
 
 override_dh_installinit:
-	dh_installinit -- "start 99 2 3 4 5 . stop 01 0 1 6 ."
+	dh_installinit --init-script=monit \
+		-- "start 99 2 3 4 5 . stop 01 0 1 6 ."
 
 override_dh_fixperms:
 	dh_fixperms
-	chmod 600 debian/monit/etc/monit/monitrc
-	chmod 0700 debian/monit/var/lib/monit/events
+	chmod 600 debian/monit-gpl/etc/monit/monitrc
+	chmod 0700 debian/monit-gpl/var/lib/monit/events
 
 override_dh_auto_install:
-	dh_auto_install --destdir=debian/monit
+	dh_auto_install --destdir=debian/monit-gpl
 
