--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ stamp-h1
 #
 /aclocal.m4
 /monit
+/jdoo
 /tags
 /TAGS
 /configure
@@ -76,5 +77,8 @@ p.output
 debian/autoreconf.*
 debian/files
 debian/monit-gpl*.substvars
+debian/jdoo*.substvars
 debian/monit-gpl*debhelper*
+debian/jdoo*debhelper*
 debian/monit-gpl*/
+debian/jdoo*/
