--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: monit-gpl
+Source: jdoo
 Section: admin
 Priority: optional
 Maintainer: Jonathan Toppins <jtoppins@cumulusnetworks.com>
@@ -7,17 +7,17 @@ Build-Depends: debhelper (>= 9), dh-autoreconf, libssl-dev, libpam-dev, libkvm-d
 Standards-Version: 3.9.3
 Homepage: http://mmonit.com/monit/
 
-Package: monit-gpl
+Package: jdoo
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, lsb-base (>= 3.2-13)
 Suggests: exim4 | postfix | mail-transport-agent
 Conflicts: monit
 Description: utility for monitoring and managing daemons or similar programs
- monit is a utility for monitoring and managing daemons or similar
+ jdoo is a utility for monitoring and managing daemons or similar
  programs running on a Unix system. It will start specified programs
  if they are not running and restart programs not responding.
  .
- monit supports:
+ jdoo supports:
   * Daemon mode - poll programs at a specified interval
   * Monitoring modes - active, passive or manual
   * Start, stop and restart of programs
@@ -45,12 +45,12 @@ Description: utility for monitoring and managing daemons or similar programs
     accessible from a webbrowser
 
 
-Package: monit-gpl-dbg
+Package: jdoo-dbg
 Architecture: any
-Depends: ${misc:Depends}, monit (= ${binary:Version})
+Depends: ${misc:Depends}, jdoo (= ${binary:Version})
 Priority: extra
 Section: debug
-Description: debug symbols for monit
+Description: debug symbols for jdoo
  This package provides debugging symbols for all binary packages built
  from source package.
 
